--- a/config_parallel.yaml
+++ b/config_parallel.yaml
@@ -1,4 +1,5 @@
-# Optimized Configuration for Maximum Parallelization
+# Optimized Configuration for Maximum Sample Parallelization
+# Run many samples with 1 core each rather than few samples with many cores
 
 # Base directories (unchanged)
 base_dir: "/lustre/BIF/nobackup/mulle088"
@@ -6,132 +7,67 @@ singularity_dir: "/lustre/BIF/nobackup/mulle088/singularity"
 data_dir: "/lustre/BIF/nobackup/mulle088/data_rp/90-1196727703/00_fastq"
 media_dir: "/lustre/BIF/nobackup/mulle088/gapseq_pipeline_final/media"
 gtdbtk_db: "/lustre/BIF/nobackup/mulle088/gapseq_pipeline_final/gtdbtk_db/release226"
-metadata: "/lustre/BIF/nobackup/mulle088/gapseq_pipeline_final/metadata.csv"
+metadata: "input/meta_input_pipeline.csv"
 
 # Output directory
 results_dir: "results"
 
 # ============================================
-# PARALLELIZATION SETTINGS
+# THREAD ALLOCATION - OPTIMIZED FOR PARALLEL SAMPLES
 # ============================================
 
-# Resource Groups (for limiting parallel execution of memory-intensive tasks)
-# Uncomment and adjust based on your cluster's capabilities
-
-# Maximum simultaneous assemblies (memory-intensive)
-max_assembly_jobs: 20  # Each assembly uses ~120GB RAM
-
-# Maximum simultaneous GTDB-Tk jobs (memory-intensive)
-max_gtdbtk_jobs: 5    # Each uses ~64GB RAM
-
-# Maximum simultaneous binning jobs
-max_binning_jobs: 20   # Each uses ~32GB RAM
-
-# Maximum simultaneous MAG analyses (lighter weight)
-max_mag_analyses: 20  # Each MAG analysis uses ~8-16GB RAM
-
-# ============================================
-# TRIMMING SETTINGS
-# ============================================
+# Trimming parameters
 trim_quality: 20
 trim_min_length: 50
-trim_threads: 4        # Threads per trimming job
+trim_threads: 1  # Changed from 4
 
-# ============================================
-# ASSEMBLY SETTINGS
-# ============================================
+# SPAdes assembly parameters
 spades_kmers: "21,33,55,77"
-spades_threads: 16     # Threads per assembly
-spades_memory: 120     # GB per assembly
+spades_memory: 120  # GB
+spades_threads: 1  # Changed from 16 - MAJOR CHANGE!
 
-# ============================================
-# BINNING SETTINGS
-# ============================================
-concoct_threads: 8
-concoct_chunk_size: 10000
-concoct_min_contig_length: 1000
-mapping_threads: 8     # Threads for BWA mapping
+# Mapping for binning
+mapping_threads: 1  # Changed from 8
 
-# ============================================
-# CHECKM SETTINGS
-# ============================================
-checkm_threads: 8
+# Binning threads
+binning_threads: 1  # Changed from 8
+
+# CheckM parameters
 checkm_lineage: "bacteria"
-checkm_completeness_threshold: 50  # Minimum completeness for MAG processing
-checkm_contamination_threshold: 10  # Maximum contamination for MAG processing
+checkm_completeness_threshold: 50
+checkm_contamination_threshold: 10
+checkm_threads: 1  # Changed from 8
 
-# ============================================
-# PER-MAG ANALYSIS SETTINGS (lighter weight for parallelization)
-# ============================================
-
-# GTDB-Tk (per MAG)
-gtdbtk_threads_per_mag: 4  # Reduced for better parallelization
+# GTDB-Tk parameters (keep high for batch processing)
 gtdbtk_min_perc_aa: 10
+gtdbtk_prefix: "bacteria"
+gtdbtk_threads: 32  # Keep high - only runs once for all samples
+gtdbtk_threads_per_mag: 1  # For individual MAGs if needed
 
-# Prodigal (per MAG)
+# Prodigal parameters
 prodigal_mode: "meta"
-prodigal_threads: 1  # Prodigal is single-threaded
+prodigal_threads: 1  # Already was 1
 
-# Gapseq (per MAG)
-gapseq_threads_per_mag: 4  # Reduced for better parallelization
+# Gapseq parameters
 gapseq_bitcutoff: 200
+gapseq_threads: 1  # Changed from 4-8
+gapseq_threads_per_mag: 1  # Changed from 4
+gapseq_threads_fasta: 1  # Changed from 8
 
-# ============================================
-# FASTA SAMPLE SETTINGS (pre-assembled genomes)
-# ============================================
-# These can use more resources since they don't need binning
-gtdbtk_threads_fasta: 8
-gapseq_threads_fasta: 8
+# QUAST
+quast_threads: 1  # Changed from 4
 
-# ============================================
-# CLUSTER RESOURCE ALLOCATION
-# ============================================
-# Adjust based on your HPC system
-
-# Default resources (for lightweight tasks)
+# Resource allocation
 default_threads: 1
-default_mem: 4000      # MB
-default_time: "02:00:00"
+assembly_threads: 1  # Major change from 16!
+binning_threads: 1   # Changed from 8
+gtdbtk_threads: 32   # Keep high for batch
+gapseq_threads: 1    # Changed
 
-# Heavy tasks
-assembly_mem: 120000   # MB
-assembly_time: "24:00:00"
+# Memory allocation (MB) - unchanged
+default_mem: 4000
+assembly_mem: 120000
+binning_mem: 32000
+gtdbtk_mem: 64000
+gapseq_mem: 16000
 
-binning_mem: 32000     # MB
-binning_time: "12:00:00"
-
-gtdbtk_mem: 64000     # MB  
-gtdbtk_time: "12:00:00"
-
-checkm_mem: 32000      # MB
-checkm_time: "06:00:00"
-
-# Per-MAG tasks (lighter)
-mag_analysis_mem: 16000  # MB
-mag_analysis_time: "06:00:00"
-
-# ============================================
-# SLURM PARTITION SETTINGS
-# ============================================
-# Adjust based on your cluster's partitions
-
-default_partition: "normal"
-highmem_partition: "highmem"  # For assembly, GTDB-Tk
-gpu_partition: "gpu"  # If available for certain tools
-
-# ============================================
-# OPTIMIZATION FLAGS
-# ============================================
-
-# Use local scratch for temporary files (faster I/O)
-use_local_scratch: true
-scratch_dir: "/scratch/$USER/pipeline_tmp"
-
-# Keep going with independent jobs if one fails
-keep_going: true
-
-# Rerun incomplete jobs automatically
-rerun_incomplete: true
-
-# Wait time for file system latency
-latency_wait: 60
